# logsearcher

./: .gitignore  CMakeLists.txt  README.md  TODO
src/: bench.cpp  cli.cpp  cli.hh  commands.cpp  commands.hh  commands.hxx  environment.cpp  environment.hh  logblock.cpp  logblock.hh  logfile.cpp  logfile.hh  logtime.cpp  logtime.hh  main.cpp  ordered-logfile.cpp  ordered-logfile.hh  unordered-logfile.cpp  unordered-logfile.hh
src/sys/: unistd.hh  wrapper.hh
tests/: logfile.cpp  logtime.cpp
